--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ canvas {
 }
 body {
   margin: 0px;
-  padding: 80px;
+  padding-top: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
