--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ canvas {
 body {
   margin: 0px;
   padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
   display: flex;
   justify-content: center;
 }
@@ -122,32 +125,8 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-@media (min-width: 768px) {
-    .container-small {
-        width: 300px;
-    }
-    .container-large {
-        width: 970px;
-    } 
-} 
-@media (min-width: 992px) {
-    .container-small {
-        width: 500px;
-    }
-    .container-large {
-        width: 1170px;
-    } 
-} 
-@media (min-width: 1200px) {
-    .container-small {
-        width: 700px;
-    }
-    .container-large {
-        width: 1500px;
-    } 
-}
-
-.container-small, .container-large {
-    max-width: 30%;
-    padding-right: 20px;
+.container-sm- {
+    padding-right: 10px;
+    padding-left: 10px;
+    padding top: 10px;
 }
