--- a/style.css
+++ b/style.css
@@ -128,5 +128,5 @@ input:checked + .slider:before {
 .container-sm- {
     padding-right: 10px;
     padding-left: 10px;
-    padding top: 10px;
+    padding-top: 10px;
 }
